# vstash

./: .gitignore  README.md  VSTASH_CONSTITUTION.md  demo.tape  pyproject.toml  vstash.toml.example
.github/workflows/: publish.yml
benchmark/: BENCHMARK_REPORT.md  E2E_TEST_REPORT.md  benchmark.py  e2e_test.py
benchmark/corpus/: climate_change_report.md  fastapi_patterns.md  neural_architecture_search.md
tests/: conftest.py  test_chat.py  test_config.py  test_embed.py  test_frontmatter.py  test_ingest.py  test_mcp.py  test_store.py
vstash/: __init__.py  chat.py  cli.py  config.py  embed.py  ingest.py  mcp.py  models.py  store.py  watch.py
